// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with login prop 1`] = `
.c0 {
  width: 300px;
  height: 40px;
  line-height: 50px;
  margin: 0;
  padding: 0;
  float: none;
  margin-left: 0;
  padding-top: 0;
  padding-left: 60px;
  font-size: 22px;
  background: #FFFFFF;
  background-image: url(edlogo.png);
  background-position: left center;
  background-repeat: no-repeat;
}

.c0::before {
  content: 'Event Dynamic';
}

<div
  className="c0"
/>
`;

exports[`renders correctly with no props 1`] = `
.c0 {
  width: 300px;
  height: 40px;
  line-height: 50px;
  margin: 0;
  padding: 0;
  float: left;
  margin-left: 20px;
  padding-top: 10px;
  padding-left: 55px;
  font-size: 24px;
  color: #FFFFFF;
  background: none;
  background-image: url(edlogowhite.png);
  background-position: 7px 20px;
  background-repeat: no-repeat;
}

.c0::before {
  content: 'Event Dynamic';
}

<div
  className="c0"
/>
`;
